# datafox

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz.yml
examples/: profile_datafox.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/eval_queries/: join  negation  regex
fuzz/corpus/evaluate_in_memory/: atom  builtins
fuzz/corpus/parse_queries/: atom  builtins  invalid  negation  query_set
fuzz/fuzz_targets/: eval_queries.rs  evaluate_in_memory.rs  parse_queries.rs
src/: ast.rs  client.rs  diagnostic.rs  error.rs  evaluator.rs  lib.rs  parser.rs  plan.rs  prelude.rs  pretty.rs  storage.rs  substitution.rs  term.rs  unify.rs  universe.rs  value.rs
