[package]
name = "datafox"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A small Datalog parser and streaming query engine for querying facts."
license = "BSD-3-Clause"
repository = "https://github.com/leostera/datafox"
readme = "README.md"
keywords = ["datalog", "query", "facts", "logic", "rules"]
categories = ["data-structures", "parser-implementations"]
include = ["Cargo.toml", "README.md", "src/**/*.rs", "examples/**/*.rs"]

[dependencies]
async-trait = "0.1"
rayon = "1.7"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt", "sync"] }
tracing = "0.1"

[dev-dependencies]
bincode = "1.3"
proptest = "1.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
