[package]
name = "datafox-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
datafox = { path = ".." }
libfuzzer-sys = "0.4"

[workspace]

[[bin]]
name = "parse_queries"
path = "fuzz_targets/parse_queries.rs"
test = false
doc = false
bench = false

[[bin]]
name = "evaluate_in_memory"
path = "fuzz_targets/evaluate_in_memory.rs"
test = false
doc = false
bench = false
