[package]
name = "datafox-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
datafox = { path = ".." }
libfuzzer-sys = "0.4"

[workspace]

[[bin]]
name = "parse_queries"
path = "fuzz_targets/parse_queries.rs"
test = false
doc = false
bench = false

[[bin]]
name = "eval_queries"
path = "fuzz_targets/eval_queries.rs"
test = false
doc = false
bench = false
